--- a/my_codes/Movie_Genre_Prediction/Movie_Script_Genre_Predictions.ipynb
+++ b/my_codes/Movie_Genre_Prediction/Movie_Script_Genre_Predictions.ipynb
@@ -368,6 +368,8 @@
     }
    ],
    "source": [
+    "# Lets load the test data for prediction when our model is trained enough\n",
+    "\n",
     "df_test = pd.read_csv('C:/Users/akudnaver/Desktop/Amits_Docs/Machine_Learning/Projects/Movies_rating/MovieScriptsParticipantsData-1/MovieScriptsParticipantsData/Test.csv')\n",
     "df_test.head()"
    ]
@@ -499,6 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# In this step we are going to check the lenght of each script and add it as a column to our existing dataframe\n",
+    "\n",
     "df_train['Script_length'] = df_train['Script'].apply(lambda x: len(x))\n",
     "df_test['Script_length'] = df_test['Script'].apply(lambda x: len(x))"
    ]
@@ -568,6 +572,9 @@
     }
    ],
    "source": [
+    "# Plotting is always worth pulling over for, here we are just going to plot lenght of our script against the Genre \n",
+    "# different statistics\n",
+    "\n",
     "df_train.groupby('Genre').mean().plot(kind='line',rot=0, xticks=range(0,22,1), title=\"Mean script length per class\")\n",
     "df_train.groupby('Genre').median().plot(kind='line',rot=0, xticks=range(0,22,1), title=\"Median script length per class\")\n",
     "df_train.groupby('Genre').min().plot(kind='line',rot=0, xticks=range(0,22,1), title=\"Minimum script length per class\")\n",
@@ -613,6 +620,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Let's split our data to training and validation set\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(temp[['Script']].values, temp.Genre.values, \n",
     "                                                    test_size=0.3, \n",
     "                                                    stratify= temp.Genre.values, \n",
@@ -671,6 +680,7 @@
     "# # Now as we are readling with a text data , we have to create our own vocabulury and the best way to deal with it is to use the TFIDF , \n",
     "# which retrieves the most signifcant words in our document= 'Script' and then convert these words into a vector which will be later fed to our \n",
     "# machine learning mode . Let's begin by using the below set of parameters!\n",
+    "\n",
     "tfv = TfidfVectorizer(min_df=3,  max_features=100, \n",
     "            strip_accents='unicode', analyzer='word',token_pattern=r'\\w{1,}',\n",
     "            ngram_range=(1, 3), use_idf=1,smooth_idf=1,sublinear_tf=1,\n",
