Movie Script Genre Predictions Notebook

--- a/my_codes/Movie_Genre_Prediction/Movie_Script_Genre_Predictions.ipynb
+++ b/my_codes/Movie_Genre_Prediction/Movie_Script_Genre_Predictions.ipynb
@@ -370,7 +370,7 @@
    "source": [
     "# Lets load the test data for prediction when our model is trained enough\n",
     "\n",
-    "df_test = pd.read_csv('C:/Users/akudnaver/Desktop/Amits_Docs/Machine_Learning/Projects/Movies_rating/MovieScriptsParticipantsData-1/MovieScriptsParticipantsData/Test.csv')\n",
+    "df_test = pd.read_csv('./Test.csv')\n",
     "df_test.head()"
    ]
   },
